Add training page and enhance module system with comprehensive configuration

--- a/FASE-1-rebuild/index.html
+++ b/FASE-1-rebuild/index.html
@@ -18,7 +18,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#training">Training</a>
+                        <a class="nav-link" href="training.html">Training</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#emergency">Emergency</a>
@@ -39,7 +39,7 @@
                 <button class="btn btn-danger btn-lg pulse-button" onclick="scrollToSection('emergency')">
                     Report Emergency
                 </button>
-                <button class="btn btn-primary btn-lg" onclick="scrollToSection('training')">
+                <button class="btn btn-primary btn-lg" onclick="window.location.href='training.html'">
                     Start Training
                 </button>
             </div>
