--- a/FASE-1-rebuild/modules/template.html
+++ b/FASE-1-rebuild/modules/template.html
@@ -51,10 +51,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html#training">Training</a>
+                        <a class="nav-link" href="../training.html">Training</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html#emergency">Emergency</a>
+                        <a class="nav-link" href="../emergency.html">Emergency</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../index.html#about">About</a>
