--- a/FASE-1-rebuild/modules/module-template.html
+++ b/FASE-1-rebuild/modules/module-template.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[Module Title] - FASE-1</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link href="../css/style.css" rel="stylesheet">
+    <title>Module Title - FASE-1 Training</title>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-    <!-- Navigation -->
+    <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
-            <a class="navbar-brand" href="../index.html"><i class="fas fa-heartbeat"></i> FASE-1</a>
+            <a class="navbar-brand" href="../index.html">FASE-1</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -24,163 +24,174 @@
                     <li class="nav-item">
                         <a class="nav-link" href="../training.html">Training</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../index.html#emergency">Emergency</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../index.html#about">About</a>
-                    </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <!-- Module Header -->
-    <div class="module-header bg-light py-5">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-8">
-                    <h1 id="moduleTitle">[Module Title]</h1>
-                    <p class="lead" id="moduleDescription">[Module Description]</p>
-                    <div class="module-meta">
-                        <span class="badge bg-primary me-2">
-                            <i class="fas fa-clock me-1"></i> <span id="moduleDuration">[Duration]</span>
-                        </span>
-                        <span class="badge bg-secondary">
-                            <i class="fas fa-layer-group me-1"></i> <span id="moduleDifficulty">[Difficulty]</span>
-                        </span>
-                    </div>
-                </div>
-                <div class="col-md-4 text-md-end">
-                    <div class="progress-circle">
-                        <span id="moduleProgress">0%</span>
-                        Complete
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <!-- Module Content -->
-    <div class="container py-5">
-        <!-- Topics List -->
-        <div class="row mb-5">
-            <div class="col-md-12">
-                <h2>Topics Covered</h2>
-                <ul class="topics-list" id="topicsList">
-                    <!-- Topics will be loaded here -->
-                </ul>
+    <div class="container py-4 module-content">
+        <div class="row">
+            <!-- Module Header -->
+            <div class="col-12 module-header">
+                <h1><i class="fas module-icon"></i> <span class="module-title">Module Title</span></h1>
+                <div class="module-meta">
+                    <span class="badge bg-primary me-2"><i class="fas fa-clock"></i> <span class="module-duration">Duration</span></span>
+                    <span class="badge module-difficulty me-2">Difficulty</span>
+                    <span class="badge bg-info"><i class="fas fa-book"></i> <span class="module-topics-count">Topics</span></span>
+                </div>
+                <div class="progress mt-3" style="height: 10px;">
+                    <div class="progress-bar" role="progressbar" style="width: 0%"></div>
+                </div>
             </div>
-        </div>
 
-        <!-- Module Sections -->
-        <div id="moduleContent">
-            <!-- Content will be loaded here -->
-        </div>
-
-        <!-- Navigation Buttons -->
-        <div class="row mt-5">
-            <div class="col-6">
-                <button class="btn btn-outline-primary" id="prevSection" disabled>
-                    <i class="fas fa-arrow-left"></i> Previous
-                </button>
+            <!-- Module Navigation -->
+            <div class="col-md-3">
+                <nav class="module-nav" id="module-nav">
+                    <div class="nav flex-column nav-pills">
+                        <a class="nav-link active" href="#introduction">Introduction</a>
+                        <div class="topics-nav">
+                            <!-- Topics will be dynamically inserted here -->
+                        </div>
+                        <a class="nav-link" href="#quiz">Knowledge Check</a>
+                        <a class="nav-link" href="#summary">Summary</a>
+                    </div>
+                </nav>
             </div>
-            <div class="col-6 text-end">
-                <button class="btn btn-primary" id="nextSection">
-                    Next <i class="fas fa-arrow-right"></i>
-                </button>
+
+            <!-- Module Sections -->
+            <div class="col-md-9">
+                <div class="module-sections">
+                    <!-- Introduction Section -->
+                    <section id="introduction" class="module-section active">
+                        <h2>Introduction</h2>
+                        <div class="introduction-content">
+                            <!-- Introduction content will be dynamically inserted here -->
+                        </div>
+                        <div class="prerequisites alert alert-warning mt-3">
+                            <h5><i class="fas fa-exclamation-triangle"></i> Prerequisites</h5>
+                            <ul class="prerequisites-list">
+                                <!-- Prerequisites will be dynamically inserted here -->
+                            </ul>
+                        </div>
+                        <div class="learning-objectives mt-4">
+                            <h5><i class="fas fa-bullseye"></i> Learning Objectives</h5>
+                            <ul class="objectives-list">
+                                <!-- Learning objectives will be dynamically inserted here -->
+                            </ul>
+                        </div>
+                    </section>
+
+                    <!-- Topics Section -->
+                    <div class="topics-content">
+                        <!-- Topic sections will be dynamically inserted here -->
+                    </div>
+
+                    <!-- Quiz Section -->
+                    <section id="quiz" class="module-section">
+                        <h2>Knowledge Check</h2>
+                        <div class="quiz-content">
+                            <!-- Quiz content will be dynamically inserted here -->
+                        </div>
+                    </section>
+
+                    <!-- Summary Section -->
+                    <section id="summary" class="module-section">
+                        <h2>Summary</h2>
+                        <div class="summary-content">
+                            <!-- Summary content will be dynamically inserted here -->
+                        </div>
+                        <div class="progress-circle">
+                            <span class="progress-percentage">0%</span>
+                            <small>Completed</small>
+                        </div>
+                    </section>
+                </div>
             </div>
         </div>
     </div>
 
     <!-- Footer -->
-    <footer class="bg-dark text-white py-4">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <h4>FASE-1</h4>
-                    <p>Empowering communities through emergency response training</p>
-                </div>
-                <div class="col-md-6 text-md-end">
-                    <p>© 2024 FASE-1. All rights reserved.</p>
-                </div>
-            </div>
+    <footer class="bg-light py-3 mt-auto">
+        <div class="container text-center">
+            <p class="mb-0">&copy; 2024 FASE-1. All rights reserved.</p>
         </div>
     </footer>
 
     <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="../js/courseManager.js"></script>
     <script src="../js/moduleConfig.js"></script>
     <script>
-        // Get module ID from URL
-        const moduleId = window.location.pathname.split('/').pop().replace('.html', '');
-        let currentModule;
-        let currentSectionIndex = 0;
-
+        // Initialize module page
         document.addEventListener('DOMContentLoaded', function() {
-            loadModule();
-            setupNavigation();
-        });
+            // Get module ID from URL or data attribute
+            const moduleId = document.querySelector('[data-module-id]')?.dataset.moduleId;
+            const module = moduleConfig.getModule(moduleId);
 
-        function loadModule() {
-            currentModule = window.moduleSystem.getModule(moduleId);
-            if (!currentModule) {
-                window.location.href = '../training.html';
+            if (!module) {
+                console.error('Module not found');
                 return;
             }
 
-            // Update header information
-            document.title = `${currentModule.title} - FASE-1`;
-            document.getElementById('moduleTitle').textContent = currentModule.title;
-            document.getElementById('moduleDescription').textContent = currentModule.description;
-            document.getElementById('moduleDuration').textContent = currentModule.duration;
-            document.getElementById('moduleDifficulty').textContent = currentModule.difficulty;
+            // Update module metadata
+            document.querySelector('.module-title').textContent = module.title;
+            document.querySelector('.module-icon').classList.add(module.icon);
+            document.querySelector('.module-duration').textContent = module.duration;
+            document.querySelector('.module-difficulty')
+                .classList.add(`bg-${getDifficultyColor(module.difficulty)}`);
+            document.querySelector('.module-difficulty').textContent = module.difficulty;
+            document.querySelector('.module-topics-count').textContent = `${module.topics.length} Topics`;
 
-            // Load topics
-            const topicsList = document.getElementById('topicsList');
-            currentModule.topics.forEach(topic => {
-                const li = document.createElement('li');
-                li.innerHTML = `<i class="fas fa-check-circle text-success me-2"></i>${topic}`;
-                topicsList.appendChild(li);
+            // Add topics to navigation
+            const topicsNav = document.querySelector('.topics-nav');
+            module.topics.forEach((topic, index) => {
+                const topicLink = document.createElement('a');
+                topicLink.href = `#topic-${index + 1}`;
+                topicLink.className = 'nav-link';
+                topicLink.textContent = topic;
+                topicsNav.appendChild(topicLink);
             });
 
-            // Load first section
-            loadSection(0);
-        }
+            // Handle navigation
+            const navLinks = document.querySelectorAll('.nav-link');
+            navLinks.forEach(link => {
+                link.addEventListener('click', function(e) {
+                    e.preventDefault();
+                    const targetId = this.getAttribute('href').substring(1);
+                    showSection(targetId);
+                });
+            });
+        });
 
-        function loadSection(index) {
-            // In a real app, this would load the actual content
-            const content = document.getElementById('moduleContent');
-            content.innerHTML = `
-                <div class="section-content">
-                    <h3>${currentModule.topics[index]}</h3>
-                    <p>Content for ${currentModule.topics[index]} will be loaded here.</p>
-                </div>
-            `;
+        function showSection(sectionId) {
+            // Hide all sections
+            document.querySelectorAll('.module-section').forEach(section => {
+                section.classList.remove('active');
+            });
 
-            // Update navigation buttons
-            document.getElementById('prevSection').disabled = index === 0;
-            document.getElementById('nextSection').disabled = index === currentModule.topics.length - 1;
-            
-            // Update progress
-            const progress = Math.round(((index + 1) / currentModule.topics.length) * 100);
-            document.getElementById('moduleProgress').textContent = `${progress}%`;
+            // Show selected section
+            const targetSection = document.getElementById(sectionId);
+            if (targetSection) {
+                targetSection.classList.add('active');
+            }
 
-            currentSectionIndex = index;
-        }
-
-        function setupNavigation() {
-            document.getElementById('prevSection').addEventListener('click', () => {
-                if (currentSectionIndex > 0) {
-                    loadSection(currentSectionIndex - 1);
+            // Update navigation
+            document.querySelectorAll('.nav-link').forEach(link => {
+                link.classList.remove('active');
+                if (link.getAttribute('href') === `#${sectionId}`) {
+                    link.classList.add('active');
                 }
             });
+        }
 
-            document.getElementById('nextSection').addEventListener('click', () => {
-                if (currentSectionIndex < currentModule.topics.length - 1) {
-                    loadSection(currentSectionIndex + 1);
-                }
-            });
+        function getDifficultyColor(difficulty) {
+            const colors = {
+                'Beginner': 'success',
+                'Intermediate': 'warning',
+                'Advanced': 'danger'
+            };
+            return colors[difficulty] || 'primary';
         }
     </script>
 </body>
